# DREAMPlaceFPGA

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt  timing_README.md
IFsupport/: README.md  (+3 more)
dreamplacefpga/ops/: CMakeLists.txt
dreamplacefpga/ops/adjust_node_area/: CMakeLists.txt  adjust_node_area.py
dreamplacefpga/ops/adjust_node_area/src/: adjust_node_area.cpp  adjust_node_area_cuda.cpp  adjust_node_area_cuda_kernel.cu  scaling_function.h  update_pin_offset.cpp  update_pin_offset_cuda.cpp  update_pin_offset_cuda_kernel.cu
dreamplacefpga/ops/clustering_compatibility/: CMakeLists.txt  __init__.py  clustering_compatibility.py  setup.py.in
dreamplacefpga/ops/clustering_compatibility/src/: flop_compatibility.cpp  flop_compatibility_cuda.cpp  flop_compatibility_cuda_kernel.cu  functions.h  lut_compatibility.cpp  lut_compatibility_cuda.cpp  lut_compatibility_cuda_kernel.cu
dreamplacefpga/ops/dct/: CMakeLists.txt  __init__.py  dct.py  dct2_fft2.py  dct_lee.py  discrete_spectral_transform.py  naive.py  setup.py.in  torch_fft_api.py
dreamplacefpga/ops/dct/src/: dct.cpp  dct.h  dct2_fft2.cpp  dct2_fft2.h  dct2_fft2_cuda.cpp  dct2_fft2_cuda.h  dct2_fft2_cuda_kernel.cu  dct_2N.cpp  dct_2N_cuda.cpp  dct_cuda.cpp  dct_cuda.h  dct_cuda_kernel.cu  dct_lee.cpp  dct_lee_cpu.h  dct_lee_cuda.cpp  dct_lee_cuda.h  dct_lee_cuda_kernel.cu  dct_lee_cuda_kernel.h  dst.cpp  dst_cuda.cpp  dxt.cpp  dxt_cuda.cpp
dreamplacefpga/ops/demandMap/: CMakeLists.txt  __init__.py  demandMap.py  setup.py.in
dreamplacefpga/ops/demandMap/src/: demandMap.cpp  demandMap_cuda.cpp  demandMap_cuda_kernel.cu  demand_function.h
dreamplacefpga/ops/density_map/: CMakeLists.txt  density_map.py  setup.py.in
dreamplacefpga/ops/density_map/src/: density_map.cpp  density_map_cuda.cpp  density_map_cuda_kernel.cu
dreamplacefpga/ops/density_overflow/: CMakeLists.txt  density_overflow.py
dreamplacefpga/ops/density_potential/: CMakeLists.txt  density_potential.py  setup.py.in
dreamplacefpga/ops/density_potential/src/: density_overflow_cuda_kernel.cu  density_potential.cpp  density_potential_cuda.cpp  density_potential_cuda_kernel.cu
dreamplacefpga/ops/draw_place/: CMakeLists.txt  PlaceDrawer.py  __init__.py  draw_place.py
dreamplacefpga/ops/draw_place/src/: PlaceDrawFPGA.h  PlaceDrawer.h  draw_place.cpp  draw_place.h
dreamplacefpga/ops/dsp_ram_legalization/: CMakeLists.txt  __init__.py  dsp_ram_legalization.py  setup.py.in
dreamplacefpga/ops/dsp_ram_legalization/src/: legalize.cpp
dreamplacefpga/ops/electric_potential/: CMakeLists.txt  electric_overflow.py  electric_potential.py  setup.py.in
dreamplacefpga/ops/electric_potential/src/: atomic_ops.cuh  atomic_ops.h  density_function.h  electric_density_map.cpp  electric_density_map_cuda.cpp  electric_density_map_cuda_kernel.cu  electric_force.cpp  electric_force_cuda.cpp  electric_force_cuda_kernel.cu
dreamplacefpga/ops/hpwl/: CMakeLists.txt  hpwl.py  setup.py.in  ~
dreamplacefpga/ops/hpwl/src/: hpwl.cpp  hpwl_atomic.cpp  hpwl_cuda.cpp  hpwl_cuda_atomic.cpp  hpwl_cuda_atomic_kernel.cu  hpwl_cuda_kernel.cu
dreamplacefpga/ops/logsumexp_wirelength/: CMakeLists.txt  logsumexp_wirelength.py  setup.py.in
dreamplacefpga/ops/logsumexp_wirelength/src/: integrate_net_weights_cuda_kernel.cu  logsumexp_wirelength_cuda_atomic.cpp  logsumexp_wirelength_cuda_atomic_kernel.cu  logsumexp_wirelength_cuda_merged.cpp  logsumexp_wirelength_cuda_merged_kernel.cu  logsumexp_wirelength_merged.cpp
dreamplacefpga/ops/lut_ff_legalization/: CMakeLists.txt  __init__.py  lut_ff_legalization.py
dreamplacefpga/ops/lut_ff_legalization/src/: lut_ff_legalization.cpp  lut_ff_legalization_cuda.cpp  lut_ff_legalization_cuda_kernel.cu
dreamplacefpga/ops/move_boundary/: CMakeLists.txt  move_boundary.py  setup.py.in
dreamplacefpga/ops/move_boundary/src/: move_boundary.cpp  move_boundary_cuda.cpp  move_boundary_cuda_kernel.cu
dreamplacefpga/ops/pin_pos/: CMakeLists.txt  __init__.py  pin_pos.py  setup.py.in
dreamplacefpga/ops/pin_pos/src/: pin_pos.cpp  pin_pos_cuda.cpp  pin_pos_cuda_kernel.cu  pin_pos_cuda_segment.cpp  pin_pos_cuda_segment_kernel.cu
dreamplacefpga/ops/pin_utilization/: CMakeLists.txt  __init__.py  pin_utilization.py
dreamplacefpga/ops/pin_utilization/src/: pin_utilization_map.cpp  pin_utilization_map_cuda.cpp  pin_utilization_map_cuda_kernel.cu
dreamplacefpga/ops/place_io/: CMakeLists.txt  __init__.py  place_io.py  setup.py.in
dreamplacefpga/ops/place_io/src/: BenchMetrics.cpp  BenchMetrics.h  Bin.h  BinMap.cpp  BinMap.h  BookshelfWriter.cpp  BookshelfWriter.h  Box.h  Enums.cpp  Enums.h  GeometryApi.h  Group.cpp  Group.h  HrchyList.h  Index.h  InterchangeDataBase.cpp  InterchangeDataBase.h  InterchangeDriver.cpp  InterchangeDriver.h  Interval.h  Iterators.h  LibCell.h  Macro.h  MacroObs.h  MacroPin.h  Net.cpp  Net.h  Node.cpp  Node.h  Object.h  Params.cpp  Params.h  Pin.h  PlaceDB.cpp  PlaceDB.h  PlaceWriter.h  Point.h  PyPlaceDB.cpp  PyPlaceDB.h  PybindPlaceDB.cpp  (+12 more)
dreamplacefpga/ops/precondTiming/: CMakeLists.txt  precondTiming.py
dreamplacefpga/ops/precondTiming/src/: precondTiming.cpp  precondTiming_cuda.cpp  precondTiming_cuda_kernel.cu
dreamplacefpga/ops/precondWL/: CMakeLists.txt  __init__.py  precondWL.py  setup.py.in
dreamplacefpga/ops/precondWL/src/: precondWL.cpp  precondWL_cuda.cpp  precondWL_cuda_kernel.cu
dreamplacefpga/ops/rmst_wl/: CMakeLists.txt  rmst_wl.py  setup.py.in
dreamplacefpga/ops/rmst_wl/src/: rmst_wl.cpp
dreamplacefpga/ops/rudy/: CMakeLists.txt  rudy.py
dreamplacefpga/ops/rudy/src/: rudy.cpp  rudy_cuda.cpp  rudy_cuda_kernel.cu
dreamplacefpga/ops/sortNode2Pin/: CMakeLists.txt  __init__.py  sortNode2Pin.py
dreamplacefpga/ops/sortNode2Pin/src/: sortNode2Pin.cpp  sortNode2Pin_cuda.cpp  sortNode2Pin_cuda_kernel.cu
dreamplacefpga/ops/timing/: timing.py  timing_graph.py
dreamplacefpga/ops/timing_net_wirelength/: CMakeLists.txt  timing_net_wirelength.py
dreamplacefpga/ops/weighted_average_wirelength/: CMakeLists.txt  __init__.py  setup.py.in  weighted_average_wirelength.py
(+124 files in other folders)
